# yolopv2_ros2

./: LICENSE  README.md  package.xml  setup.cfg  setup.py
launch/: yolopv2_ros2.launch.py
yolopv2_ros2/: bird_eye_view_node.py  debug_yolopv2_inference_node.py  follow_node.py  path_publisher_node.py  yolopv2_inference_node.py
